[gd_scene load_steps=12 format=2]

[ext_resource path="res://Img/Flame_02.png" type="Texture" id=1]
[ext_resource path="res://Img/Flame_01.png" type="Texture" id=2]
[ext_resource path="res://Img/Spaceship_04_ORANGE.png" type="Texture" id=3]
[ext_resource path="res://Spaceship.gd" type="Script" id=4]
[ext_resource path="res://Sounds/Shot02.mp3" type="AudioStream" id=5]
[ext_resource path="res://Sounds/Boost01.mp3" type="AudioStream" id=6]
[ext_resource path="res://Sounds/Bomb04.mp3" type="AudioStream" id=7]
[ext_resource path="res://Sounds/Engine01.mp3" type="AudioStream" id=8]
[ext_resource path="res://Sounds/Hit.mp3" type="AudioStream" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 30.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[node name="Spaceship" type="RigidBody2D"]
collision_mask = 2
gravity_scale = 0.0
linear_damp = 1.0
angular_damp = 1.2
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Body" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="Flame1" type="AnimatedSprite" parent="."]
position = Vector2( -6.5, 55 )
scale = Vector2( 0.3, 0.4 )
frames = SubResource( 2 )
playing = true

[node name="Flame2" type="AnimatedSprite" parent="."]
position = Vector2( 6.5, 55 )
scale = Vector2( 0.3, 0.4 )
frames = SubResource( 2 )
playing = true

[node name="BoostTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="ShotPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0

[node name="BoostPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="BombBombPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
pitch_scale = 1.3

[node name="EnginePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -20.0
pitch_scale = 0.25

[node name="HitPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -20.0
pitch_scale = 1.2

[connection signal="timeout" from="BoostTimer" to="." method="_on_Timer_timeout"]
